[진민구] 장바구니 부트스트랩 템플릿 적용 중

--- a/semiproject-shop/src/main/webapp/resources/css/style.css
+++ b/semiproject-shop/src/main/webapp/resources/css/style.css
@@ -2377,6 +2377,26 @@ ol {
 	cursor: pointer;
 }
 
+.shopping__cart__table table tbody tr td.quantity__item .quantity .pro-qty-3 {
+	width: 80px;
+}
+
+.shopping__cart__table table tbody tr td.quantity__item .quantity .pro-qty-3 input {
+	width: 50px;
+	border: none;
+	text-align: center;
+	color: #111111;
+	font-size: 16px;
+}
+
+.shopping__cart__table table tbody tr td.quantity__item .quantity .pro-qty-3 .qtybtn {
+	font-size: 16px;
+	color: #888888;
+	width: 10px;
+	cursor: pointer;
+}
+
+
 .shopping__cart__table table tbody tr td.cart__price {
 	color: #111111;
 	font-size: 18px;
