[이호민]style.css 일부수정, addOrderForm css적용 및 현재 장바구니를 통한 구매만 가능
- css : <input type="number">태그 상하 화살표 제거 .imgCart 선택자 사용시 width, height
150px 고정
- addOrderForm 여러 값 리스트 보여지나 아직 주문 시 단품 값만 넘어감

--- a/semiproject-shop/src/main/webapp/resources/css/style.css
+++ b/semiproject-shop/src/main/webapp/resources/css/style.css
@@ -30,6 +30,20 @@
 /* Template default CSS
 /*----------------------------------------*/
 
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  appearance : none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance : none;
+}
+
 html,
 body {
 	height: 100%;
@@ -2310,6 +2324,10 @@ ol {
 /*---------------------
   Shopping Cart
 -----------------------*/
+.imgCart {
+	width : 150px;
+	height : 150px;
+}
 
 .shopping__cart__table {
 	margin-bottom: 30px;
