--- a/semiproject-shop/src/main/webapp/resources/css/style.css
+++ b/semiproject-shop/src/main/webapp/resources/css/style.css
@@ -1002,6 +1002,7 @@ ol {
 	height: 260px;
 	position: relative;
 	background-position: center center;
+	background-size: contain;
 }
 
 .product__item__pic .label {
@@ -1191,6 +1192,7 @@ ol {
 	font-size: 15px;
 	color: #b7b7b7;
 	padding-left: 20px;
+	padding-right: 30px;
 	border: 1px solid #e5e5e5;
 	height: 42px;
 }
@@ -1222,7 +1224,7 @@ ol {
 	background: transparent;
 	position: absolute;
 	right: 0;
-	padding: 0 15px;
+	padding: 0 8px;
 	top: 0;
 	height: 100%;
 }
